verwende auch /etc/grub.d